--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <link rel=
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/frenchfrysays3/website-for-coding/refs/heads/main/src/style/style.css" type="text/css">
+    <title>Home</title>
   </head>
+  <body>
+    <div class="topnav">
+      
+    </div>
+  </body>
 </html>
