--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <div class="topnav">
+      <a href="/">home(this page)</a>
+      <a href="https://frenchfrysays1.wixsite.com/lucas-games">subcriptions(will come out soon)</a>
       
     </div>
   </body>
